# commit-msg-helper

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc  README.md  pyproject.toml
.github/: copilot-instructions.md
src/commit_msg_helper/: cli.py  helpers.py
tests/: test_cli.py  test_helpers.py
