[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "commit-msg-helper"
version = "0.1.0"
description = "A pre-commit helper for commit messages"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "rbanffy" }
]

[project.scripts]
branch-needs-jira = "commit_msg_helper.cli:branch_needs_jira"
message-needs-jira = "commit_msg_helper.cli:message_needs_jira"

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 79
